# c-rex

./: .gitignore  CMakeLists.txt  main.c
include/: ast.h  charclass.h  lexer.h  rrange.h  utf8.h
src/: ast.c  lexer.c  rrange.c
